<resources>
    <string name="app_name">CONVERT-er</string>
    <string name="convert_er">CONVERT-er</string>
    <string name="string_convert_er">CONVERT-er</string>
    <string name="units">UNITS</string>
    <string name="currency">CURRENCY</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="temp">Temperature</string>
    <string name="speed">Speed</string>
    <string name="len_con">Length Conversion</string>
    <string name="todo">TODO</string>
    <string name="curr_con">Currency Conversion</string>
    <string name="len_name1">Meter(m)</string>
    <string name="len_name2">Centimeter(cm)</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doublezero">00</string>
    <string name="point">.</string>
    <string name="clear">C</string>
    <string name="backspace"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>