<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6cbbd "
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgm"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tilebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/audiowide"
                android:gravity="center"
                app:tabMode="fixed"
                android:text="@string/app_name"
                android:textColor="@color/maintext"
                android:textSize="35sp"
                tools:ignore="TextContrastCheck" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/convo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tab_back"
            app:tabMode="fixed"
            android:elevation="6dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="2dp"
                android:text="@string/units" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="2dp"
                android:text="@string/currency" />

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewpager"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>